--- a/projeto jokenpo/index.html
+++ b/projeto jokenpo/index.html
@@ -25,8 +25,8 @@
 
         <p class="result"></p>
 
-        <p class="minha-pontuaçao">Sua pontuação <span>0</span></p>
-        <p class="pontuaçao-maquina">pontuação da maquina <span>0</span></p>
+        <p class="minha-pontuaçao">Sua pontuação <span id="score-human">0</span></p>
+        <p class="pontuaçao-maquina">pontuação da maquina <span id="score-machine">0</span></p>
 
 
 
